--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,3 +1,4 @@
 <h1><%= @contact.name %></h1>
+
 <p>Phone: <%= @contact.phone %></p>
-<p>Email: <%= @contact.phone %></p>
+<p>Email: <%= @contact.email %></p>
