--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,4 +1,6 @@
 <h1><%= @contact.name %></h1>
 
-<p>Phone: <%= @contact.phone %></p>
-<p>Email: <%= @contact.email %></p>
+<ul>
+    <li><p>Phone:<%= @contact.phone %></p></li>
+    <li><p>Email:<%= @contact.email %></p></li>
+</ul>
