Add links to views

--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @contact.name %></h1>
 
-<ul>
-    <li><p>Phone:<%= @contact.phone %></p></li>
-    <li><p>Email:<%= @contact.email %></p></li>
-</ul>
+<p>Phone: <%= @contact.phone %></p>
+<p>Email: <%= @contact.email %></p>
+
+<p><a href="/contacts">Return to contact listing</a></p>
